--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.10.4",
+    "@apollo/experimental-nextjs-app-support": "^0.11.0",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.44.0",
+    "graphql": "^16.8.1",
     "next": "14.2.3",
     "next-sanity": "^9.3.8",
     "react": "^18",
