--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@apollo/client": "^3.10.4",
     "@apollo/experimental-nextjs-app-support": "^0.11.0",
+    "@headlessui/react": "^2.0.4",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.44.0",
     "graphql": "^16.8.1",
@@ -19,11 +20,14 @@
     "next-sanity": "^9.3.8",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "sanity": "^3.44.0",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "5.0.2",
+    "@graphql-codegen/client-preset": "4.2.6",
+    "@graphql-codegen/introspection": "4.0.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -31,8 +35,6 @@
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.4.5",
-    "@graphql-codegen/introspection": "4.0.3",
-    "@graphql-codegen/client-preset": "4.2.6"
+    "typescript": "^5.4.5"
   }
 }
