--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@headlessui/react": "^2.0.4",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.44.0",
+    "clsx": "^2.1.1",
     "graphql": "^16.8.1",
     "next": "14.2.3",
     "next-sanity": "^9.3.8",
