--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@apollo/client": "^3.10.4",
     "@apollo/experimental-nextjs-app-support": "^0.11.0",
     "@headlessui/react": "^2.0.4",
+    "@hookform/resolvers": "^3.6.0",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.44.0",
     "clsx": "^2.1.1",
@@ -21,18 +22,21 @@
     "next-sanity": "^9.3.8",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
+    "react-phone-number-input": "^3.4.3",
     "sanity": "^3.44.0",
     "styled-components": "^6.1.11",
-    "swiper": "^11.1.4"
+    "swiper": "^11.1.4",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "5.0.2",
     "@graphql-codegen/client-preset": "4.2.6",
     "@graphql-codegen/introspection": "4.0.3",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
