--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "14.2.3",
     "next-sanity": "^9.3.8",
     "react": "^18",
+    "react-datepicker": "^7.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
