--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   "dependencies": {
     "@apollo/client": "^3.10.4",
     "@apollo/experimental-nextjs-app-support": "^0.11.0",
+    "@gsap/react": "^2.1.1",
     "@headlessui/react": "^2.0.4",
     "@hookform/resolvers": "^3.6.0",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.44.0",
     "clsx": "^2.1.1",
     "graphql": "^16.8.1",
+    "gsap": "^3.12.5",
     "keen-slider": "^6.8.6",
     "next": "14.2.3",
     "next-sanity": "^9.3.8",
